--- a/frontend/src/styles/Footer.module.css
+++ b/frontend/src/styles/Footer.module.css
@@ -1,6 +1,25 @@
 .footer {
-  background-color: #f8f9fa;
-  padding: 20px;
-  text-align: center;
-  bottom: 0;
+  background-color: #FFCC00;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 20rem;
+}
+
+.footerContent{
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  height: 100%;
+  width: 80%;
+}
+
+.footerContent h3{
+  padding: 10px;
+}
+
+.footerContent li{
+  list-style-type: none;
+  color: #333333;
+  padding: 10px;
 }
