--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -43,8 +43,8 @@
     color: #fff;
     display: flex;
     flex-direction: column;
-    position: absolute;
-    top: 50%;
+    /* position: absolute;
+    top: 50%; */
     border-top-left-radius: 24px;
     border-top-right-radius: 24px;
 }
